--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
                 </ul>
             </div>
         </div>
+        <div id="slider">
+            <div class="slider-img"></div>
+            <h1 class="slider-text">Le Catering</h1>
+        </div>
     </div>
 </body>
 </html>
