--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
             <div class="slider-img"></div>
             <h1 class="slider-text">Le Catering</h1>
         </div>
+        <div id="footer">
+            <p>Powered by <a href="">SawSew467</a></p>
+        </div>
     </div>
 </body>
 </html>
