--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 <body>
     <div id="main">
         <div id="header">
-            <div class="home"><a href="#">Gourmet au Catering</a></div>
+            <div class="home"><a href="#">Gourgergergregrmet au Catering</a></div>
             <div id="nav">
                 <ul>
-                    <li class="nav-item"><a href="#about">About</a></li>
-                    <li class="nav-item"><a href="#menu">Menu</a></li>
-                    <li class="nav-item"><a href="#contact">Contact</a></li>
+                    <li class="nav-item"><a href="#about">Abgregregout</a></li>
+                    <li class="nav-item"><a href="#menu">Megregregnu</a></li>
+                    <li class="nav-item"><a href="#contact">Congrergtact</a></li>
                 </ul>
             </div>
         </div>
