create new footer

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
                 </ul>
             </div>
         </div>
+        <div id="footer">
+            <p>Powered by <a href="">SawSew467</a></p>
+        </div>
     </div>
 </body>
 </html>
